<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Chat</string>

    <string name="title_home">Home</string>
    <string name="title_login">Login</string>
    <string name="title_status">Status</string>
    <string name="title_settings">Settings</string>
    <string name="title_register">Register</string>
    <string name="title_friend_list">Friends</string>
    <string name="title_change_email">Change Email</string>
    <string name="title_invite_friend">Invite a friend</string>
    <string name="title_change_username">Change Username</string>
    <string name="title_forget_password">Forgot password</string>
    <string name="title_change_password">Update your password</string>
    <string name="title_friend_request_list">Incoming invitations</string>

    <string name="error_server">Server error.</string>
    <string name="error_network">Please check your network connection.</string>
    <string name="error_something_went_wrong">Oops, something went wrong.</string>
    <string name="error_wrong_password">Password incorrect.</string>
    <string name="error_auth">The email or password incorrect.</string>
    <string name="error_password_mismatch">Those passwords didn\'t match.</string>
    <string name="email_not_registered">Email not registered.</string>
    <string name="error_already_friend">Already your friend.</string>
    <string name="error_contact_not_found">User is not found.</string>
    <string name="error_empty_password">Password field cannot be empty.</string>
    <string name="error_cannot_send_email">Cannot send emails.</string>
    <string name="error_already_requested_friend">You have already sent a friend request.</string>
    <string name="error_email_already_exist">A user with that email address already exists.</string>
    <string name="error_email_address_not_valid">Email address not valid.</string>
    <string name="error_invalid_email_or_password">Invalid email or password.</string>
    <string name="error_field_required">This field is required.</string>
    <string name="error_invalid_password">Enter a combination of at least six numbers, letters and punctuation marks (such as ! and &amp;).</string>
    <string name="error_invalid_email">Please enter a valid email address.</string>
    <string name="error_invalid_username">The username must be between 2 and 32 characters.</string>
    <string name="error_picking_file">Error processing file.</string>

    <string name="permission_dialog_cancel">Deny</string>
    <string name="permission_dialog_ok">Allow</string>

    <string name="camera_permission_dialog_message">This app requires access to the following tools and data: camera, device\'s storage. You can allow access in your settings.</string>
    <string name="write_external_storage_permission_dialog_message">This app requires access to devices\'s storage. You can allow access in your settings.</string>

    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="account_created">Account created</string>
    <string name="need_account">Need an account?</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="user_greeting">We\'re so excited to see you again!</string>
    <string name="forget_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="chats">Chats</string>
    <string name="message">Message</string>
    <string name="friends">Friends</string>
    <string name="add_friend">Invite a friend</string>
    <string name="profile">Profile</string>
    <string name="friend_requests">Incoming invitations</string>
    <string name="logout">Logout</string>
    <string name="status">Status</string>
    <string name="yesterday">Yesterday</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="update_account">Complete</string>
    <string name="send_request">Send a request</string>

    <string name="home_drawer_logout">Logout</string>
    <string name="home_drawer_friends">Friends</string>
    <string name="home_drawer_settings">Settings</string>
    <string name="home_drawer_invite_friend">Invite a friend</string>
    <string name="home_drawer_friend_requests">Incoming invitations</string>

    <string name="save_button">Save</string>
    <string name="info_button">Info</string>
    <string name="update_status_button">Update status</string>
    <string name="set_profile_photo_button">Set profile photo</string>

    <string name="forget_password_header">Forgot your password?</string>
    <string name="forget_password_body">Enter your email address to retrieve your password</string>

    <string name="invite_friend_header">Invite a friend to join the app by email</string>
    <string name="invite_friend_send_button">Send invite</string>

    <string name="friend_remove_dialog_title">Unfriend</string>
    <string name="friend_remove_dialog_message">Do you really want to unfriend %s?</string>
    <string name="friend_remove_success">You unfriended %s</string>
    <string name="friend_option_remove">Remove from friends</string>
    <string name="friend_option_message">Message</string>
    <string name="friend_option_cancel">Cancel</string>
    <string name="friend_status_last_seen">Last seen %s</string>
    <string name="friend_status_last_seen_just_now">Last seen just now</string>

    <string name="register_header">Create an account</string>

    <string name="update_status_header">You can add a few lines about yourself. Anyone who opens your profile will see this text.</string>

    <string name="change_password_header">Please enter your existing password and your new password.</string>

    <string name="change_email_header">Your current email address is %s What would you like to change it to?</string>

    <string name="item_friend_request_add_button">Add</string>
    <string name="item_friend_request_decline_button">Decline</string>

    <string name="home_title">Chat</string>
    <string name="home_chat_list_empty_title">Let\'s start chatting!</string>
    <string name="home_chat_list_empty_description">How about sending your first message to a friend?</string>

    <string name="name_colon">Name:</string>
    <string name="email_colon">Email:</string>
    <string name="status_colon">Status:</string>
    <string name="new_password_colon">New password:</string>
    <string name="current_password_colon">Current password:</string>

    <string name="wants_add_as_friend">хочет добавить вас в список друзей</string>
    <string name="approved_friend_request">accepted your friend request</string>
    <string name="cancelled_friend_request">denied your friendship request</string>

    <string name="delete_friend_title">Remove %s as a friend?</string>
    <string name="delete_friend_text">Are you sure you want to remove %s as your friend?</string>

    <string name="message_prompt_app">The user with the specified email was not found. Do you want to send her/him a link to the application?</string>
    <string name="message_text_prompt_app">Install the Personal Chat Application:</string>
    <string name="message_subject_prompt_app">Hello. Do you want to talk?</string>
    <string name="url_google_play">https://play.google.com/store/apps/details?id=</string>

    <string name="request_has_been_sent">Friend request sent.</string>
    <string name="no_incoming_invites">No incoming invites.</string>

    <string name="friend_request">Friend request</string>
    <string name="friend_request_approved">Friend request confirmed</string>
    <string name="friend_request_cancelled">Friend request canceled</string>

    <string name="chat_list_you">You</string>
    <string name="chat_list_photo">&#128444; Photo</string>

    <string name="photo">Choose a photo</string>
    <string-array name="photo_picker_items">
        <item>Upload from device</item>
        <item>Take photo</item>
    </string-array>

    <string name="send">Send</string>
    <string name="send_message"> sends you a message</string>
    <string name="success_edit_user">Data updated successfully</string>
    <string name="delete_message_title">Delete message</string>
    <string name="delete_message_text">Are you sure you want to delete this message?</string>
    <string name="send_friend_message">Send a message</string>

    <string name="resend_password">Get the password</string>
    <string name="email_sent">Password was sent to the specified email address</string>

    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <string name="settings_heading_account">Account</string>
    <string name="settings_email_title">Email</string>
    <string name="settings_status_title">Status</string>
    <string name="settings_password_title">Password</string>
    <string name="settings_username_title">Username</string>
    <string name="settings_status_summary">Add a few words about yourself</string>
    <string name="settings_email_summary">Used for restoring access to your account</string>

    <string name="app_notification_channel_id" translatable="false">DefaultChannelID</string>
</resources>