<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_friends"
        android:icon="@drawable/ic_friends"
        android:title="@string/home_drawer_friends" />

    <item
        android:id="@+id/nav_invite_friend"
        android:icon="@drawable/ic_invite_friend"
        android:title="@string/home_drawer_invite_friend" />

    <item
        android:id="@+id/nav_friend_request_list"
        android:icon="@drawable/ic_friend_requests"
        android:title="@string/home_drawer_friend_requests" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/home_drawer_settings" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/home_drawer_logout" />

</menu>