<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <PreferenceCategory android:title="@string/settings_heading_account">

        <Preference
            android:key="username"
            android:title="@string/settings_username_title"
            tools:summary="Ivan" />

        <Preference
            android:key="email"
            android:title="@string/settings_email_title"
            tools:summary="ivan.ivanov@gmail.com" />

        <Preference
            android:key="password"
            android:title="@string/settings_password_title"
            tools:summary="********" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>