<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:whatever="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_normal">

    <com.andreabaccega.widget.FormEditText
        android:id="@+id/input_email"
        style="@style/EditTextStyle"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/input_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        whatever:emptyErrorString="@string/error_field_must_not_be_empty"
        whatever:testErrorString="@string/error_email_address_not_valid"
        whatever:testType="email" />

    <com.andreabaccega.widget.FormEditText
        android:id="@+id/input_password"
        style="@style/EditTextStyle"
        android:layout_marginTop="@dimen/spacing_normal"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/text_forget_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email"
        app:layout_constraintVertical_chainStyle="packed"
        whatever:emptyErrorString="@string/error_field_must_not_be_empty" />

    <TextView
        android:id="@+id/text_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_normal"
        android:text="@string/forget_password"
        android:textAppearance="@style/Text.Blueberry"
        app:layout_constraintBottom_toTopOf="@id/button_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password"
        app:layout_constraintVertical_chainStyle="packed" />


    <Button
        android:id="@+id/button_login"
        style="@style/ButtonStyle"
        android:layout_marginBottom="@dimen/spacing_huge"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/need_account"
            android:textAppearance="@style/Text" />

        <TextView
            android:id="@+id/text_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:text="@string/sign_up"
            android:textAppearance="@style/Text.Blueberry" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>