<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:whatever="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/account_rl_actions"
        android:background="@color/background"
        android:isScrollContainer="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <FrameLayout
                android:id="@+id/account_frame_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_tiny"
                android:background="@drawable/circle_circle">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_img_photo"
                    android:layout_width="@dimen/image_width"
                    android:layout_height="@dimen/image_height"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_account_circle"
                    android:tint="@color/grey"
                    android:visibility="visible" />

                <FrameLayout
                    android:id="@+id/account_group_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="@dimen/image_width"
                        android:layout_height="@dimen/image_height"
                        android:src="@color/translucent"
                        android:visibility="visible" />

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/progressBarTint"
                        android:indeterminateTint="@color/progressBarTint"
                        android:indeterminateTintMode="src_in" />

                </FrameLayout>

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_tiny"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/email_colon"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold" />

            <com.andreabaccega.widget.FormEditText
                android:id="@+id/account_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingTop="@dimen/spacing_large"
                android:paddingBottom="@dimen/spacing_large"
                android:textColor="@color/dark_grey"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/normal_text_size"
                whatever:emptyErrorString="@string/error_field_must_not_be_empty"
                whatever:testErrorString="@string/error_email_address_not_valid"
                whatever:testType="email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_tiny"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/name_colon"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold" />

            <com.andreabaccega.widget.FormEditText
                android:id="@+id/account_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingTop="@dimen/spacing_large"
                android:paddingBottom="@dimen/spacing_large"
                android:textColor="@color/dark_grey"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/normal_text_size"
                whatever:emptyErrorString="@string/error_field_must_not_be_empty" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_tiny"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/status_colon"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold" />

            <com.andreabaccega.widget.FormEditText
                android:id="@+id/account_input_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/status"
                android:inputType="textMultiLine"
                android:maxLength="200"
                android:paddingTop="@dimen/spacing_large"
                android:paddingBottom="@dimen/spacing_large"
                android:textColor="@color/dark_grey"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/normal_text_size"
                whatever:emptyErrorString="@string/error_field_must_not_be_empty" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_tiny"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/current_password_colon"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold" />

            <com.andreabaccega.widget.FormEditText
                android:id="@+id/account_input_current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/current_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingTop="@dimen/spacing_large"
                android:paddingBottom="@dimen/spacing_large"
                android:textColor="@color/dark_grey"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_tiny"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/new_password_colon"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold" />

            <com.andreabaccega.widget.FormEditText
                android:id="@+id/account_input_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingTop="@dimen/spacing_large"
                android:paddingBottom="@dimen/spacing_large"
                android:textColor="@color/dark_grey"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/normal_text_size" />

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/account_rl_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/spacing_large"
        android:layout_marginRight="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_large">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <Button
                android:id="@+id/account_btn_edit"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/update_account" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>