<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:isScrollContainer="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/large_padding">

            <FrameLayout
                android:id="@+id/user_frame_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/extra_small_margin"
                android:background="@drawable/circle_circle">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_img_photo"
                    android:layout_width="@dimen/image_width"
                    android:layout_height="@dimen/image_height"
                    android:src="@drawable/ic_account_circle"
                    android:visibility="visible" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:text="@string/email_colon"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_label_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:paddingTop="@dimen/large_padding"
                android:paddingBottom="@dimen/large_padding"
                android:textColor="@color/dark_grey"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:text="@string/name_colon"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_label_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:paddingTop="@dimen/large_padding"
                android:paddingBottom="@dimen/large_padding"
                android:textColor="@color/dark_grey"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/user_label_hint_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:text="@string/status_colon"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_label_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/status"
                android:maxLength="200"
                android:paddingTop="@dimen/large_padding"
                android:paddingBottom="@dimen/large_padding"
                android:textColor="@color/dark_grey"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/normal_text_size" />

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/large_margin"
        android:layout_marginRight="@dimen/large_margin"
        android:layout_marginBottom="@dimen/large_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <Button
                android:id="@+id/user_btn_send_message"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingLeft="@dimen/large_padding"
                android:paddingRight="@dimen/large_padding"
                android:shadowColor="#E3BFE3"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/send_friend_message"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/medium_text_size" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>