<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.login.ForgetPasswordActivity">


    <com.andreabaccega.widget.FormEditText
        android:id="@+id/forget_password_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:background="@drawable/rounded_edittext_register_login"
        android:gravity="start|center_vertical"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/large_padding"
        android:paddingTop="@dimen/medium_padding"
        android:paddingEnd="@dimen/large_padding"
        android:paddingBottom="@dimen/medium_padding"
        android:textColor="@color/dark_grey"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="@dimen/medium_text_size"
        app:emptyErrorString="@string/error_field_must_not_be_empty"
        app:layout_constraintBottom_toTopOf="@+id/forget_password_btn_send_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:testErrorString="@string/error_email_address_not_valid"
        app:testType="email" />

    <Button
        android:id="@+id/forget_password_btn_send_password"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:paddingLeft="@dimen/large_padding"
        android:paddingRight="@dimen/large_padding"
        android:text="@string/resend_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget_password_input_email" />

</androidx.constraintlayout.widget.ConstraintLayout>